# mailipy

./: .gitignore  LICENSE  Pipfile  README.md  new_release.sh  pyproject.toml  release_prepare.sh  release_upload.sh  sample_contacts.csv  sample_template.md  setup.py
.github/workflows/: flake8-lint.yml  main.yml  pytest.yml
mailipy/: gen.py  gen_test.py  send.py  send_test.py
