[tool.poetry]
name = "mailipy"
version = "0.1.0"
description = "A handy CLI tool for bulk-sending emails"
authors = ["William Di Luigi <williamdiluigi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
jinja2 = "^3.1.5"
markdown = "^3.7"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.poetry.scripts]
mailipy-gen = "mailipy.gen:main"
mailipy-send = "mailipy.send:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
